[package]
name = "web_server"
version = "0.1.0"
authors = ["kruztw <kruztw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
serde = "1.0.126"
async-std = {version = "1", features = ["attributes"]}
rand = "0.8.4"
